--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,52 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Node.js dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Expo
+.expo/
+.expo-shared/
+web-build/
+
+# Android/Gradle
+.gradle/
+android/build/
+android/app/build/
+*.apk
+*.aab
+
+# iOS
+ios/build/
+*.pbxuser
+!default.pbxuser
+*.xcworkspace
+!default.xcworkspace
+
+# macOS
+.DS_Store
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs/
+*.log
+
+# Firebase
+firebase-debug.log
+.firebase/
